014_k8s_intro_minikube/geo-app/geo-db-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geography-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geography-db
  template:
    metadata:
      labels:
        app: geography-db
    spec:
      containers:
        - name: geography-db
          image: maxkhal/geography-db:2
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: geography-db
spec:
  selector:
    app: geography-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
