014_k8s_intro_minikube/geo-app/geo-ingress-dep.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geography-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: geography-server
                port:
                  number: 4000
